[gd_scene load_steps=21 format=2]

[ext_resource path="res://sprites/proto_perso2.png" type="Texture" id=1]
[ext_resource path="res://scenes/player/Player.gd" type="Script" id=2]
[ext_resource path="res://sprites/proto_feets.png" type="Texture" id=3]
[ext_resource path="res://sprites/proto_perso2_right_arm.png" type="Texture" id=4]
[ext_resource path="res://sprites/proto_perso2_left_arm.png" type="Texture" id=5]
[ext_resource path="res://sprites/proto_perso2_torso.png" type="Texture" id=6]
[ext_resource path="res://sprites/proto_perso2_head.png" type="Texture" id=7]
[ext_resource path="res://sprites/proto_perso2_leg1_top.png" type="Texture" id=8]
[ext_resource path="res://sprites/proto_perso2_leg2_top.png" type="Texture" id=9]
[ext_resource path="res://sprites/proto_perso2_leg1_bottom.png" type="Texture" id=10]
[ext_resource path="res://sprites/proto_perso2_leg2_bottom.png" type="Texture" id=11]
[ext_resource path="res://scenes/player/PlayerStatus.gd" type="Script" id=12]
[ext_resource path="res://scenes/player/PlayerAnimation.gd" type="Script" id=13]
[ext_resource path="res://scenes/player/PlayerMovement.gd" type="Script" id=14]
[ext_resource path="res://scenes/player/PlayerRender.gd" type="Script" id=15]

[sub_resource type="CapsuleShape2D" id=1]
radius = 13.0081
height = 52.2267

[sub_resource type="RayShape2D" id=2]
length = 70.0
slips_on_slope = true

[sub_resource type="CircleShape2D" id=3]
radius = 3.48591

[sub_resource type="CircleShape2D" id=4]
radius = 3.48591

[sub_resource type="CircleShape2D" id=5]
radius = 3.48591

[node name="Player" type="KinematicBody2D"]
pause_mode = 1
position = Vector2( -1.05946, 0.264862 )
collision_layer = 2
collision_mask = 17
script = ExtResource( 2 )

[node name="PlayerStatus" type="Node" parent="."]
script = ExtResource( 12 )

[node name="PlayerMovement" type="Node" parent="."]
script = ExtResource( 14 )

[node name="PlayerRender" type="Node" parent="."]
script = ExtResource( 15 )

[node name="PlayerAnimation" type="Node" parent="."]
script = ExtResource( 13 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -15.459 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )
disabled = true

[node name="DebugStickLine" type="Line2D" parent="."]
visible = false
position = Vector2( 0.167, 33 )
points = PoolVector2Array( 0, -3, 0, 3, 0, 0, 20, 0 )
width = 1.0
default_color = Color( 1, 0, 0, 1 )

[node name="FeetLine" type="Line2D" parent="."]
visible = false
position = Vector2( 0, 33 )
points = PoolVector2Array( -2, 0, 2, 0 )
width = 1.0
default_color = Color( 0.501961, 1, 0.4, 1 )

[node name="MainSprite" type="Sprite" parent="."]
visible = false
position = Vector2( -37.7643, -27.3447 )
scale = Vector2( 0.180471, 0.180471 )
texture = ExtResource( 1 )
offset = Vector2( 194.569, 126.759 )

[node name="ShadowSprite" type="Sprite" parent="."]
self_modulate = Color( 1, 1, 1, 0.254902 )
position = Vector2( -1.92381, 73.1685 )
scale = Vector2( 0.185328, 0.0652709 )
texture = ExtResource( 3 )

[node name="LadderDetectorArea2D" type="Area2D" parent="."]
monitorable = false
collision_layer = 4
collision_mask = 8

[node name="CollisionShape2D3" type="CollisionShape2D" parent="LadderDetectorArea2D"]
shape = SubResource( 3 )

[node name="ExitDetectorArea2D2" type="Area2D" parent="."]
monitorable = false
collision_layer = 64
collision_mask = 32

[node name="CollisionShape2D3" type="CollisionShape2D" parent="ExitDetectorArea2D2"]
shape = SubResource( 4 )

[node name="NoFlyZoneDetectorArea2D3" type="Area2D" parent="."]
monitorable = false
collision_layer = 256
collision_mask = 128

[node name="CollisionShape2D3" type="CollisionShape2D" parent="NoFlyZoneDetectorArea2D3"]
shape = SubResource( 5 )

[node name="PlayerDetectionArea2D" type="Area2D" parent="."]
collision_layer = 1024
collision_mask = 512

[node name="CollisionShape2D3" type="CollisionShape2D" parent="PlayerDetectionArea2D"]
shape = SubResource( 5 )

[node name="Skeleton2D" type="Skeleton2D" parent="."]

[node name="Bone2D" type="Bone2D" parent="Skeleton2D"]

[node name="RenderRoot" type="Node2D" parent="."]

[node name="Body" type="Sprite" parent="RenderRoot"]
position = Vector2( 0.375, -3 )
scale = Vector2( 0.18, 0.18 )
texture = ExtResource( 6 )

[node name="Head" type="Sprite" parent="RenderRoot/Body"]
position = Vector2( 27.799, -86.1946 )
texture = ExtResource( 7 )
offset = Vector2( -30.5172, -171.114 )

[node name="RightArm" type="Sprite" parent="RenderRoot/Body"]
position = Vector2( 54.4194, -70.7678 )
z_index = -1
texture = ExtResource( 5 )
offset = Vector2( 2.24988, 77.979 )

[node name="LeftArm" type="Sprite" parent="RenderRoot/Body"]
position = Vector2( -18.1012, -78.7744 )
texture = ExtResource( 4 )
offset = Vector2( -53.6546, 84.332 )

[node name="RightTopLeg" type="Sprite" parent="RenderRoot/Body"]
position = Vector2( 26.9914, 94.2965 )
texture = ExtResource( 8 )
offset = Vector2( -4.59952, 89.2926 )

[node name="RightBottomLeg" type="Sprite" parent="RenderRoot/Body/RightTopLeg"]
position = Vector2( -14.8818, 178.031 )
texture = ExtResource( 10 )
offset = Vector2( 10.2823, 74.9619 )

[node name="RightFeet" type="Node2D" parent="RenderRoot/Body/RightTopLeg/RightBottomLeg"]
position = Vector2( -13.362, 143.653 )

[node name="LeftTopLeg" type="Sprite" parent="RenderRoot/Body"]
position = Vector2( -25.2665, 111.383 )
texture = ExtResource( 9 )
offset = Vector2( -6.25304, 78.8202 )

[node name="LeftBottomLeg" type="Sprite" parent="RenderRoot/Body/LeftTopLeg"]
position = Vector2( -2.20466, 160.394 )
texture = ExtResource( 11 )
offset = Vector2( -4.59956, 79.9224 )

[node name="LeftFeet" type="Node2D" parent="RenderRoot/Body/LeftTopLeg/LeftBottomLeg"]
position = Vector2( -0.128262, 145.576 )
